crates/stef-compiler/tests/inputs/invalid/struct_named_dup_name.stef
struct Sample {
    field: string @1,
    field: string @2,
}
